# polaris-encounters-api

./: .coveragerc  .pre-commit-config.yaml  CODEOWNERS  Dockerfile  Dockerfile.tox  README.md  pyproject.toml  run_docker.sh  run_local.sh  tox.ini
.circleci/: config.yml  run_integration_tests.sh
dhos_encounters_api/: app.py
dhos_encounters_api/blueprint_api/: __init__.py  controller.py  publish.py
dhos_encounters_api/blueprint_development/: __init__.py  controller.py
dhos_encounters_api/helpers/: cli.py
dhos_encounters_api/models/: api_spec.py  encounter.py  location_history.py  score_system_history.py
dhos_encounters_api/openapi/: openapi.yaml
docs/: make_schema.py  schema.dot  schema.plantuml
integration-tests/: Dockerfile  Makefile  README.md  docker-compose.yml  environment.py  reporting.py  requirements.txt
integration-tests/clients/: dhos_encounters_client.py  dhos_locations_client.py  dhos_services_client.py  dhos_users_client.py  rabbitmq_client.py
integration-tests/features/: encounter_crud.feature  performance.feature  search.feature
integration-tests/helpers/: encounter.py  jwt.py  location.py  patient.py
integration-tests/steps/: assertions_steps.py  dhos_services_steps.py  encounters_search_steps.py  encounters_steps.py  performance.py  rabbitmq_steps.py
migrations/versions/: 1a2960dfd979_modified_idx.py  33edf1d1d924_add_indexes.py  6059a86142ac_recreate_index_unique_epr_encounter_id_deleted_at.py  d0983d7e3954_drop_unused_data.py  d6b859f01555_initial_migration.py  db9023dbf02a_added_merge_history.py  dc5025dbf02b_add_index.py
scripts/: docker-compose.yml  setup_local.sh
tests/: conftest.py  test_api.py  test_controller.py  test_controller_v2.py  test_encounter_locations.py  test_encounter_patients.py  test_merge.py  test_openapi.py
